# graphics-course

./: .gitignore  CMakeLists.txt
cmake/: thirdparty.cmake
common/render_utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
common/scene/: Camera.hpp  SceneManager.cpp  SceneManager.hpp
common/wsi/: OsWindowingManager.cpp
demo/: App.cpp  App.hpp  CMakeLists.txt  DemoDebugRenderer.cpp  DemoDebugRenderer.hpp  EnvironmentManager.cpp  EnvironmentManager.hpp  FramePacket.hpp  HiZPass.cpp  HiZPass.hpp  Renderer.cpp  Renderer.hpp  SharpenPass.cpp  SharpenPass.hpp  TAAPass.cpp  TAAPass.hpp  Temporal.hpp  WorldRenderer.cpp  WorldRenderer.hpp
demo/shaders/: CameraData.h  Common.glsl  Light.h  NormalPerturbation.glsl  PBR.glsl  Random.glsl  bake_diffuse_irradiance.comp  compute_env_brdf.comp  convert_cubemap.comp  cubemap.frag  cubemap.vert  deferred_pass.comp  demo_diffuse_indirect.frag  demo_diffuse_sh.frag  demo_specular_ibl.frag  geometry_pass.frag  geometry_pass.vert  hiz.comp  prefilter_envmap.comp  sharpen.comp  taa_resolve.comp
resources/scenes/DemoScene/: demo_scene.gltf
resources/scenes/white_sphere/: white_sphere.gltf
sssr_visualization/demo_scene_640x360/: color.exr  currCamera.csv  deferredPassParams.csv  gBufferNorm.exr  hiz_mip0.exr  hiz_mip1.exr  hiz_mip2.exr  hiz_mip3.exr  hiz_mip4.exr  hiz_mip5.exr  hiz_mip6.exr  hiz_mip7.exr  hiz_mip8.exr  hiz_mip9.exr
sssr_visualization/hiz_raw_mips/: Mip1.exr  Mip10.exr  Mip2.exr  Mip3.exr  Mip4.exr  Mip5.exr  Mip6.exr  Mip7.exr  Mip8.exr  Mip9.exr
